--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             autoplay
             muted
             loop
-            src="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0"
+            src="./vids/BG_new.mp4"
           ></video>
           <video
             class="video2"
@@ -94,23 +94,23 @@
         </p>
 
         <div class="video-wrapper">
-          <a href="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0">
-            <video autoplay muted loop src="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0"></video>
+          <a href="./vids/BG_new.mp4">
+            <video autoplay muted loop src="./vids/BG_new.mp4"></video>
           </a>
-          <a href="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0">
-            <video autoplay muted loop src="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0"></video>
+          <a href="./vids/BG_new.mp4">
+            <video autoplay muted loop src="./vids/BG_new.mp4"></video>
           </a>
-          <a href="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0">
-            <video autoplay muted loop src="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0"></video>
+          <a href="./vids/BG_new.mp4">
+            <video autoplay muted loop src="./vids/BG_new.mp4"></video>
           </a>
-          <a href="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0">
-            <video autoplay muted loop src="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0"></video>
+          <a href="./vids/BG_new.mp4">
+            <video autoplay muted loop src="./vids/BG_new.mp4"></video>
           </a>
-          <a href="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0">
-            <video autoplay muted loop src="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0"></video>
+          <a href="./vids/BG_new.mp4">
+            <video autoplay muted loop src="./vids/BG_new.mp4"></video>
           </a>
-          <a href="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0">
-            <video autoplay muted loop src="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/BG_Home.mp4?alt=media&token=84a10169-56e7-42d4-a654-f2ac82d383e0"></video>
+          <a href="./vids/BG_new.mp4">
+            <video autoplay muted loop src="./vids/BG_new.mp4"></video>
           </a>
         </div>
       </div>
