--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           autoplay
           muted
           loop
-          src="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/500mb%20video%2FBINDER%20prewed%20%202.mp4?alt=media&token=68c23788-a5b7-4e45-8636-03443cd7c006"
+          src="https://firebasestorage.googleapis.com/v0/b/welcomefilms-8128e.appspot.com/o/500mb%20video%2FBINDER_new.mp4?alt=media&token=f5bee021-0146-4e6f-b7db-cad2825091fe"
         ></video>
         <h2 class="page6_heading">PHOTOGRAPHY SHOWCASE</h2>
       </div>
