--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    
     <div id="nav2">
       <a href="/index.html">
         <img
@@ -62,7 +63,7 @@
             autoplay
             muted
             loop
-            src="https://firebasestorage.googleapis.com/v0/b/r6-firebase.appspot.com/o/home.mp4?alt=media&token=2e908f46-90f5-47f7-a2d1-d6205fe3e3d6"
+            src="./vids/home_new.mp4"
           ></video>
         </div>
       </div>
