--- a/crew/owner.html
+++ b/crew/owner.html
@@ -6,6 +6,7 @@
     <title>Welcomefilms</title>
     <link rel="icon" href="./Assets/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="../styles/common.css" />
+    <link rel="stylesheet" href="../styles/story.css">
     <link rel="stylesheet" href="../styles/navbar.css" />
     <link rel="stylesheet" href="../styles/owner.css" />
   </head>
@@ -28,10 +29,6 @@
         </div>
       </div>
     </div>
-    <img
-      src="https://images.unsplash.com/photo-1660162129606-c12ece87e967?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60"
-      class="bg-img"
-    />
     <nav>
       <a href="/index.html"><h3>HOME</h3></a>
       <a href="/story.html"><h3>OUR STORY</h3></a>
@@ -49,7 +46,123 @@
       <a href="/faqs.html"><h3>FAQs</h3></a>
     </nav>
     <div id="page1">
-      
+      <div class="carousel-container">
+        <div class="carousel my-carousel carousel--translate">
+          <input
+            class="carousel__activator"
+            type="radio"
+            name="carousel"
+            id="F"
+            checked="checked"
+          />
+          <input
+            class="carousel__activator"
+            type="radio"
+            name="carousel"
+            id="G"
+          />
+          <input
+            class="carousel__activator"
+            type="radio"
+            name="carousel"
+            id="H"
+          />
+          <input
+            class="carousel__activator"
+            type="radio"
+            name="carousel"
+            id="I"
+          />
+          <input
+            class="carousel__activator"
+            type="radio"
+            name="carousel"
+            id="J"
+          />
+          <input
+            class="carousel__activator"
+            type="radio"
+            name="carousel"
+            id="K"
+          />
+          <div class="carousel__controls">
+            <label
+              class="carousel__control carousel__control--backward"
+              for="J"
+            ></label
+            ><label
+              class="carousel__control carousel__control--forward"
+              for="G"
+            ></label>
+          </div>
+          <div class="carousel__controls">
+            <label
+              class="carousel__control carousel__control--backward"
+              for="F"
+            ></label
+            ><label
+              class="carousel__control carousel__control--forward"
+              for="H"
+            ></label>
+          </div>
+          <div class="carousel__controls">
+            <label
+              class="carousel__control carousel__control--backward"
+              for="G"
+            ></label
+            ><label
+              class="carousel__control carousel__control--forward"
+              for="I"
+            ></label>
+          </div>
+          <div class="carousel__controls">
+            <label
+              class="carousel__control carousel__control--backward"
+              for="H"
+            ></label
+            ><label
+              class="carousel__control carousel__control--forward"
+              for="J"
+            ></label>
+          </div>
+          <div class="carousel__controls">
+            <label
+              class="carousel__control carousel__control--backward"
+              for="I"
+            ></label
+            ><label
+              class="carousel__control carousel__control--forward"
+              for="K"
+            ></label>
+          </div>
+          <div class="carousel__controls">
+            <label
+              class="carousel__control carousel__control--backward"
+              for="J"
+            ></label
+            ><label
+              class="carousel__control carousel__control--forward"
+              for="F"
+            ></label>
+          </div>
+          <div class="carousel__track">
+            <li class="carousel__slide"></li>
+            <li class="carousel__slide"></li>
+            <li class="carousel__slide"></li>
+            <li class="carousel__slide"></li>
+            <li class="carousel__slide"></li>
+            <li class="carousel__slide"></li>
+          </div>
+          <div class="carousel__indicators">
+            <label class="carousel__indicator" for="F"></label>
+            <label class="carousel__indicator" for="G"></label>
+            <label class="carousel__indicator" for="H"></label>
+            <label class="carousel__indicator" for="I"></label>
+            <label class="carousel__indicator" for="J"></label>
+            <label class="carousel__indicator" for="K"></label>
+          </div>
+        </div>
+      </div>
     </div>
 
     <footer>
@@ -98,15 +211,15 @@
           <div class="right2">
             <div class="follow">Follow us:</div>
             <a href="https://www.instagram.com/welcomefilms_/">
-              <img src="./Assets/insta.png" alt="" />
+              <img src="../Assets/insta.png" alt="" />
             </a>
             <a href="https://www.youtube.com/@welcomefilmsproduction6945">
-              <img src="./Assets/youtube.png" alt="" />
+              <img src="../Assets/youtube.png" alt="" />
             </a>
             <a href="https://www.facebook.com/profile.php?id=100075919856831">
-              <img src="./Assets/facebook.png" alt="" />
+              <img src="../Assets/facebook.png" alt="" />
             </a>
-            <img src="./Assets/linkedin.png" alt="" />
+            <img src="../Assets/linkedin.png" alt="" />
           </div>
         </div>
       </div>
