--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 src="https://images.unsplash.com/photo-1689947312764-405609bad51c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=60"
               />
             </div>
-            <h5>AHMAD & MONA</h5>
+            <h5>AYUSH & MONA</h5>
           </a>
           <a href="" class="img-cnt">
             <div class="img">
